3062
This SID may be of interest: http://www.scala-lang.org/sites/default/files/sids/nielsen/Tue,%202009-06-02,%2013:16/early-defs.pdf

Although it doesn't seem to be implemented in 2.8, at least with the proposed syntax.
```scala
scala> new A { val a = "5"; super; }
<console>:1: error: '.' expected but ';' found.
       new A { val a = "5"; super; }
                                 ^
```
